<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="77dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/todaysRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12sp"
                android:layout_marginBottom="8sp"
                android:gravity="center"
                android:text="@string/todaysRateTextView" />

            <TextView
                android:id="@+id/yesterdaysRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0sp"
                android:layout_marginBottom="20sp"
                android:gravity="center"
                android:text="@string/yesterdaysRateTextView" />

            <TextView
                android:id="@+id/monthlyChartTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0sp"
                android:layout_marginBottom="4sp"
                android:gravity="center"
                android:text="@string/chartTitle" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/historyChartMonth"
                android:layout_width="match_parent"
                android:layout_height="250sp">

            </com.github.mikephil.charting.charts.LineChart>

            <TextView
                android:id="@+id/weeklyChartTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:layout_marginBottom="4sp"
                android:gravity="center"
                android:text="@string/chartTitle" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/historyChartWeek"
                android:layout_width="match_parent"
                android:layout_height="250sp">
            </com.github.mikephil.charting.charts.LineChart>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>